NEXUS-AI/k8s/config-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: nexus-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
      annotations:
       prometheus.io/scrape: 'true'
       prometheus.io/path: '/actuator/prometheus'
       prometheus.io/port: '8888'
    spec:
      containers:
        - name: config-server
          image: ghcr.io/your-username/nexus-ai/config-server:latest
          ports:
            - containerPort: 8888
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 30
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: config-server-service
  namespace: nexus-ai
spec:
  selector:
    app: config-server
  ports:
    - port: 8888
      targetPort: 8888
  type: ClusterIP
